タグの表示 (#16)

--- a/web/static/app/pages/QuestionDetailPage/style.scss
+++ b/web/static/app/pages/QuestionDetailPage/style.scss
@@ -2,3 +2,14 @@
   width: 80%;
   margin: 3rem auto auto;
 }
+.taggroup {
+  color: #ffffff;
+}
+.button {
+  display: inline-block;
+  font-weight: bold;
+  font-size: 0.8rem;
+  border-radius: 1rem;
+  color: #ffffff;
+  background: #008080;
+}
