--- a/web/static/app/components/QuestionItem/style.scss
+++ b/web/static/app/components/QuestionItem/style.scss
@@ -5,3 +5,18 @@
   font-size: 1.8rem;
   text-overflow: ellipsis;
 }
+.taggroup{
+  color: #ffffff;
+}
+.button {
+  display: inline-block;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  color: #ffffff;
+  background: #008080;
+}
