--- a/web/static/app/components/QuestionPost/style.scss
+++ b/web/static/app/components/QuestionPost/style.scss
@@ -17,6 +17,9 @@
 .bodyEdit {
   height: 14rem !important;
 }
+.tagEdit {
+  height: calc(1.5em + 0.75rem + 0.2rem);
+}
 
 .label {
   display: inline-block;
