タグ表示の位置調整 (#20)

--- a/web/static/app/components/QuestionItem/style.scss
+++ b/web/static/app/components/QuestionItem/style.scss
@@ -15,7 +15,8 @@
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  letter-spacing: 0.05em;
   border-radius: 0.5rem;
   color: #ffffff;
   background: #008080;
