--- a/web/static/app/components/QuestionDetail/Question/style.scss
+++ b/web/static/app/components/QuestionDetail/Question/style.scss
@@ -36,3 +36,19 @@
   text-align: left;
   word-break: break-all;
 }
+.taggroup{
+  color: "#ffffff";
+}
+.button {
+  display: inline-block;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+  font-weight: bold;
+  font-size: 1.3rem;
+  letter-spacing: 0.05em;
+  border-radius: 0.5rem;
+  color: #ffffff;
+  background: #008080;
+}
