タグ編集機能の追加と表示の微調整 (#21)

--- a/web/static/app/components/QuestionDetail/Question/style.scss
+++ b/web/static/app/components/QuestionDetail/Question/style.scss
@@ -25,6 +25,9 @@
 .bodyEdit {
   height: 7rem !important;
 }
+.tagEdit {
+  height: calc(1.5em + 0.75rem + 0.2rem);
+}
 
 .body {
   box-sizing: border-box;
