--- a/web/static/app/components/QuestionItem/style.scss
+++ b/web/static/app/components/QuestionItem/style.scss
@@ -5,6 +5,13 @@
   font-size: 1.8rem;
   text-overflow: ellipsis;
 }
+.bodytext{
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 1.4rem;
+  color: #696969;
+}
 .taggroup{
   color: #ffffff;
 }
