--- a/web/static/app/pages/QuestionListPage/style.scss
+++ b/web/static/app/pages/QuestionListPage/style.scss
@@ -1,6 +1,12 @@
 @import '~@/assets/css/commonStyle';
 
 .main {
-  width: 80%;
+  width: 85%;
   margin: 3rem auto auto;
+}
+
+.container {
+  width: 100%;
+  display: -webkit-flex;
+  display: flex;
 }
