フォーマット修正 (#35)
* apply lint

* apply format

--- a/web/static/app/components/QuestionDetail/Question/style.scss
+++ b/web/static/app/components/QuestionDetail/Question/style.scss
@@ -38,8 +38,8 @@
   text-align: left;
   word-break: break-all;
 }
-.taggroup{
-  color: "#ffffff";
+.taggroup {
+  color: '#ffffff';
 }
 .button {
   display: inline-block;
